--- a/src/main/resources/templates/inbox.html
+++ b/src/main/resources/templates/inbox.html
@@ -1,10 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div layout:decorate="~{layout}" layout:fragment="content">
+    <table class="table is-bordered is-striped is-hoverable is-fullwidth">
+        <thead>
+        <tr>
+            <th>Name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="request : ${requests}" class="modal-trigger">
+            <td>[[${request.name}]] wants to be your friend</td>
+            <td>
+                <form th:action="@{/inbox/{id}/accept(id=${request.id})}" method="post">
+                    <button class="button is-primary">Accept</button>
+                </form>
+            </td>
+            <td>
+                <form th:action="@{/inbox/{id}/decline(id=${request.id})}" method="post">
+                    <button class="button is-danger">Decline</button>
+                </form>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 
-</body>
-</html>
+    <nav class="pagination is-centered" role="navigation" aria-label="pagination">
+        <a th:href="${pageInfo.isFirst} ? '' : @{/inbox (page=${pageInfo.number-1}, size=${pageSize})}" class="pagination-previous" th:classappend="${pageInfo.isFirst} ? ' is-disabled' : ''">Previous</a>
+        <a th:href="${pageInfo.isLast} ? '' : @{/inbox (page=${pageInfo.number+1}, size=${pageSize})}" class="pagination-next" th:classappend="${pageInfo.isLast} ? ' is-disabled' : ''">Next</a>
+        <ul th:if="${pageInfo.totalElements <= 4 and pageInfo.totalElements > 0}" class="pagination-list">
+            <li th:each="i : ${#numbers.sequence(0, pageInfo.totalPages-1)}">
+                <a th:href="@{/inbox (page=${i}, size=${pageSize})}" class="pagination-link" th:classappend="${pageInfo.number == i} ? ' is-current' : ''">[[${i+1}]]</a>
+            </li>
+        </ul>
+    </nav>
+</div>
